SERVER-17372 fix findAndModify output when there is an insert in the upsert: true, new: false case